* fix(index.html): change data-bs-theme attribute value from "dark" to "light" * fix(index.html): change class attribute value of header element to "card container glass me-auto fixed-top rounded-pill rounded-top-0 rounded-start-0 align-self-start w-90 text-start m-0 justify-content-start p-3 ps-0 pt-0 pb-1 shadow" * fix(index.html): change class attribute value of main element to "card glass" * fix(index.html): change class attribute value of article element to "card-body container border-5 rounded-5 rounded-top-0" * fix(index.html): change class attribute value of section element to "container bg-transparent w-75" * fix(index.html): change class attribute value of p element to "container d-block rounded-bottom-5 my-5" * fix(index.html): change class attribute value of h3 element to "text-center bg-info mx-auto rounded" * fix(index.html):

--- a/src/css/theme-switcher.css
+++ b/src/css/theme-switcher.css
@@ -187,3 +187,16 @@ ul {
   color: #aa0000aa !important;
 }
 */
+
+.bg-theme-accent {
+  background-color: var(--color-accent) !important;
+}
+.bg-theme-accent2 {
+  background-color: var(--color-accent2) !important;
+}
+.bg-theme-secondary {
+  background-color: var(--color-secondary) !important;
+}
+.bg-theme-primary {
+  background-color: var(--color-primary) !important;
+} 
